数据库配置

--- a/playground/src/main/resources/application.yml
+++ b/playground/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
-    url: 
+    url: jdbc:mysql://121.43.40.44:3306/field?serverTimeZone=UTC
