--- a/playground/src/main/resources/application.yml
+++ b/playground/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://121.43.40.44:3306/field?serverTimeZone=UTC
+
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      id-type: assign_id
+
