--- a/playground/src/main/resources/application.yml
+++ b/playground/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
 
 spring:
   datasource:
+    hikari:
+      minimum-idle: 3
+      maximum-pool-size: 10
+      max-lifetime: 30000
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
