--- a/playground/src/main/resources/application.yml
+++ b/playground/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://121.43.40.44:3306/field?serverTimeZone=UTC
+  rabbitmq:
+    host: 121.43.40.44
 
 mybatis-plus:
   configuration:
@@ -18,4 +20,5 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: assign_id
+
 
